--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -16,6 +16,17 @@
             {% else %}
                 <td>{{ item.name }}</td>
             {% endif %}
+            <td>
+                <a href="/toggle/{{ item.id }}">
+                    Toggle
+                </a>
+            </td>
+
+            <td>
+                <a href="/edit/{{ item.id }}">
+                    Edit
+                </a>
+            </td>
             </tr>
             {% empty %}
                 <tr><td>You have nothing to do</td></tr>
